--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.7",
+    "backend": "file:..",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
