--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.0.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "datauri": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
